# mpd-radio-ui

./: LICENSE  README.org  config.py.template  mpd-radio-ui.service  pyproject.toml  server.py
static/css/: styles.css
templates/: index.html
